wallet_core/lib/error_category/error_category_derive/tests/derive_error_category/fail_multiple_errors.stderr
error: enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_multiple_errors.rs:5:5
  |
5 |     First,
  |     ^^^^^

error: enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_multiple_errors.rs:6:5
  |
6 |     Second,
  |     ^^^^^^
