wallet_core/lib/error_category/error_category_derive/tests/derive_error_category/fail_multiple_errors.rs
use error_category::ErrorCategory;

#[derive(ErrorCategory)]
enum Error {
    First,
    Second,
}

fn main() {}
